@@ -64,7 +64,7 @@ DRLM are compatible with previous versions, unless otherwise noted.
 
 The references pointing to fix #nr or issue #nr refer to our issues tracker
 
-DRLM Version 2.4.0 (February 2021) - Release Notes
+DRLM Version 2.4.0 (March 2021) - Release Notes
 --------------------------------------------------
   * Multiple configuration supported
  
@@ -95,6 +95,8 @@ DRLM Version 2.4.0 (February 2021) - Release Notes
   * List Unscheduled clients bug fixed
 
   * Removed unsupported SysVinit service management
+
+  * SSH_PORT variable independent of SSH_OPTS
 
 
 DRLM Version 2.3.2 (December 2020) - Release Notes
