@@ -443,7 +443,7 @@ SUDO_CMDS_DRLM=( 'mount' 'vgs' 'stat' 'cat /etc/rear/drlm.token' )
 ########
 
 SSH_PORT=22
-SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR -p ${SSH_PORT}"
+SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR"
 
 ############### ----- LIST PRETTY OPTIONS
 #
