@@ -29,7 +29,7 @@
 # SSH PARAMETERS set ssh port and options
 #
 #SSH_PORT=22
-#SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR -p ${SSH_PORT}"
+#SSH_OPTS="-tt -o UserKnownHostsFile=/dev/null -o StrictHostKeychecking=no -o LogLevel=ERROR"
 
 ##################################
 # Additional DRLM Configurations #
